--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,9 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "nodemailer": "^6.9.6",
+    "nodemon": "^3.0.1"
   },
   "devDependencies": {
     "prisma": "^5.4.2"
