--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
     "mailgen": "^2.0.27",
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.7",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "rand-token": "^1.0.1"
   },
   "devDependencies": {
     "prisma": "^5.4.2"
